WIP: update readmes with Rust information. Comment debug printouts